Added spinner loading animations to Monitor.
Also restyled the application error notice, so that it now covers the
full screen.

--- a/PiClimate.Monitor.WebAssembly/wwwroot/index.html
+++ b/PiClimate.Monitor.WebAssembly/wwwroot/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport"/>
     <title>PiClimate.Monitor</title>
-    <base href="/"/>
-    <link rel="stylesheet" href="/libs/bootstrap.min.css">
-    <link rel="stylesheet" href="/libs/Chart.min.css">
-    <link rel="stylesheet" href="/style.css"/>
+    <base href="/" />
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+
+    <link rel="stylesheet" href="/libs/bootstrap.min.css" />
+    <link rel="stylesheet" href="/libs/Chart.min.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/PiClimate.Monitor.WebAssembly.styles.css" />
+
     <script src="/libs/jquery.min.js"></script>
     <script src="/libs/bootstrap.bundle.min.js"></script>
     <script src="/libs/moment-with-locales.min.js"></script>
@@ -18,13 +21,22 @@
   </head>
 
   <body>
-    <div id="blazor-error-ui">
-      An unhandled error has occurred.
-      <a class="reload" href="">Reload</a>
+    <div id="blazor-error-ui" class="fixed-top w-100 vh-100">
+      <div class="d-flex justify-content-center align-items-center w-100 h-100">
+        <div class="alert alert-danger h4 text-center m-0">
+          <div class="m-3">
+            An unhandled exception has occurred.
+          </div>
+          <button class="btn btn-outline-dark mb-3" onclick="location.reload()">Reload</button>
+        </div>
+      </div>
     </div>
 
     <div id="app">
-      Loading...
+      <div class="d-flex justify-content-center align-items-center fixed-top bg-dark w-100 vh-100">
+        <div class="loading-block border-light"></div>
+        <div class="loading-text text-light">Loading...</div>
+      </div>
     </div>
   </body>
 </html>
