--- a/PiClimate.Monitor.WebAssembly/wwwroot/index.html
+++ b/PiClimate.Monitor.WebAssembly/wwwroot/index.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
     <link rel="stylesheet" href="/libs/bootstrap.min.css" />
-    <link rel="stylesheet" href="/libs/Chart.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/PiClimate.Monitor.WebAssembly.styles.css" />
 
     <script src="/libs/jquery.min.js"></script>
     <script src="/libs/bootstrap.bundle.min.js"></script>
     <script src="/libs/moment-with-locales.min.js"></script>
-    <script src="/libs/Chart.min.js"></script>
+    <script src="/libs/chart.min.js"></script>
+    <script src="libs/chartjs-adapter-moment.js"></script>
     <script src="/monitor.js"></script>
     <script src="/_framework/blazor.webassembly.js"></script>
   </head>
